# IPLFCPA_publicversion

./: .gitignore  .swp  CMakeLists.txt  HandleArgs.py  LOG  Log.txt  Log1.txt  README.md  SPEC_RUN.sh  call_test.c  call_test.cpp  call_test1.c  call_test2.c  call_test4.c  ex1.c  fp1.c  gmon.out  test  test.ll  test.sh  test1.ll
SPEC/: hmmer.ll
VascoLfcpaPass/: CMakeLists.txt  lfcpa.cpp
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  rules.ninja
_build/.cmake/api/v1/reply/: cache-v2-c50cb5d31675e1ed2a60.json  cmakeFiles-v1-acf4c93c3f4846a38ce7.json  codemodel-v2-ffffdc785b08a0f500df.json  index-2022-04-15T10-33-13-0291.json  target-VascoLfcpaPass-Debug-e7bc44d8b6f09c9063ea.json  target-acc_gen-Debug-b45a27852bd1e7844b04.json  target-intrinsics_gen-Debug-a172e31525ec90fedcbf.json  target-omp_gen-Debug-0a343ac20f16719b6a75.json
_build/VascoLfcpaPass/: Makefile  cmake_install.cmake
include/: Analysis.h  TransformIR.h
